Fonts fixes in index.html and catalog.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a href="catalog.html" class="navigation-link button search-button">
+            <a href="catalog.html" class="button navigation-search-button">
               Хочу сюда
             </a>
           </li>
