--- a/catalog.html
+++ b/catalog.html
@@ -44,7 +44,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a href="catalog.html" class="navigation-link button search-button">
+            <a href="catalog.html" class="button navigation-search-button">
               Хочу сюда
             </a>
           </li>
@@ -175,7 +175,7 @@
               <img src="images/hotels/hotel-1-1.jpg" width="300" height="211" alt="красивый вид из пещеры на звездное небо" class="hotel-image">
               <h3 class="hotel-name">Amara Resort & Spa</h3>
             </a>
-            <dl>
+            <dl class="hotel-price-list">
               <dt class="hotel-type">Гостиница</dt>
               <dd class="hotel-price">От 4000 ₽</dd>
             </dl>
@@ -192,12 +192,12 @@
               <img src="images/hotels/hotel-1-2.jpg" width="300" height="211" alt="горный хребет, над которым радуга" class="hotel-image">
               <h3 class="hotel-name">Villas at Poco Diablo</h3>
             </a>
-            <dl>
+            <dl class="hotel-price-list">
               <dt class="hotel-type">Гостиница</dt>
               <dd class="hotel-price">От 5000 ₽</dd>
             </dl>
             <a href="#" class="hotel-about button">Подробнее</a>
-            <button type="button" class="hotel-favorites button added-favorites">В избранное</button>
+            <button type="button" class="hotel-favorites button added-favorites">В избранном</button>
             <div class="hotel-stars">
               <span class="visually-hidden">4 звезды</span>
               <span class="rating-star">4</span>
@@ -209,7 +209,7 @@
               <img src="images/hotels/hotel-1-3.jpg" width="300" height="211" alt="скала в пустыне" class="hotel-image">
               <h3 class="hotel-name">Desert Quail Inn</h3>
             </a>
-            <dl>
+            <dl class="hotel-price-list">
               <dt class="hotel-type">Гостиница</dt>
               <dd class="hotel-price">От 2500 ₽</dd>
             </dl>
@@ -226,7 +226,7 @@
               <img src="images/hotels/hotel-1.jpg" width="300" height="211" alt="горная гряда на закате" class="hotel-image">
               <h3 class="hotel-name">GreenTree Inn</h3>
             </a>
-            <dl>
+            <dl class="hotel-price-list">
               <dt class="hotel-type">Гостиница</dt>
               <dd class="hotel-price">От 1500 ₽</dd>
             </dl>
@@ -271,7 +271,7 @@
       </section>
 
       <!-- РАССЫЛКА -->
-      <section class="newsletter newsletter-inner">
+      <section class="newsletter-inner">
         <h2 class="newsletter-title heading">Подпишитесь на рассылку</h2>
         <p class="newsletter-desc">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form action="https://echo.htmlacademy.ru/" method="post" class="newsletter-form">
