Style fixes in index.html and catalog.html

--- a/catalog.html
+++ b/catalog.html
@@ -142,7 +142,7 @@
 
       <!-- РЕЗУЛЬТАТЫ ПОИСКА -->
       <section class="catalog-search-results">
-        <h2 class="result-title heading">Найдено гостиниц: 38</h2>
+        <h2 class="result-title title">Найдено гостиниц: 38</h2>
         <select class="select-control" aria-label="Сортировка">
           <option value="popular">Сначала популярное</option>
           <option value="cheap" selected>Сначала дешёвое</option>
@@ -179,8 +179,8 @@
               <dt class="hotel-type">Гостиница</dt>
               <dd class="hotel-price">От 4000 ₽</dd>
             </dl>
-            <a href="#" class="hotel-about button">Подробнее</a>
-            <button type="button" class="hotel-favorites button">В избранное</button>
+            <a href="#" class="hotel-about-button button">Подробнее</a>
+            <button type="button" class="hotel-favorites-button button">В избранное</button>
             <div class="hotel-stars">
               <span class="visually-hidden">4 звезды</span>
               <span class="rating-star">4</span>
@@ -196,8 +196,8 @@
               <dt class="hotel-type">Гостиница</dt>
               <dd class="hotel-price">От 5000 ₽</dd>
             </dl>
-            <a href="#" class="hotel-about button">Подробнее</a>
-            <button type="button" class="hotel-favorites button added-favorites">В избранном</button>
+            <a href="#" class="hotel-about-button button">Подробнее</a>
+            <button type="button" class="hotel-favorites-button button added-favorites-button">В избранном</button>
             <div class="hotel-stars">
               <span class="visually-hidden">4 звезды</span>
               <span class="rating-star">4</span>
@@ -213,8 +213,8 @@
               <dt class="hotel-type">Гостиница</dt>
               <dd class="hotel-price">От 2500 ₽</dd>
             </dl>
-            <a href="#" class="hotel-about button">Подробнее</a>
-            <button type="button" class="hotel-favorites button">В избранное</button>
+            <a href="#" class="hotel-about-button button">Подробнее</a>
+            <button type="button" class="hotel-favorites-button button">В избранное</button>
             <div class="hotel-stars">
               <span class="visually-hidden">3 звезды</span>
               <span class="rating-star">3</span>
@@ -230,8 +230,8 @@
               <dt class="hotel-type">Гостиница</dt>
               <dd class="hotel-price">От 1500 ₽</dd>
             </dl>
-            <a href="#" class="hotel-about button">Подробнее</a>
-            <button type="button" class="hotel-favorites button">В избранное</button>
+            <a href="#" class="hotel-about-button button">Подробнее</a>
+            <button type="button" class="hotel-favorites-button button">В избранное</button>
             <div class="hotel-stars">
               <span class="visually-hidden">2 звезды</span>
               <span class="rating-star">2</span>
@@ -272,7 +272,7 @@
 
       <!-- РАССЫЛКА -->
       <section class="newsletter-inner">
-        <h2 class="newsletter-title heading">Подпишитесь на рассылку</h2>
+        <h2 class="newsletter-title title">Подпишитесь на рассылку</h2>
         <p class="newsletter-desc">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form action="https://echo.htmlacademy.ru/" method="post" class="newsletter-form">
           <label class="newsletter-label">
