--- a/index.html
+++ b/index.html
@@ -65,43 +65,45 @@
         <p class="advantages-main-title heading">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p class="advantages-main-desc">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
         <ol class="advantages-list">
-          <li class="advantages-item blue-item">
-            <h3 class="advantages-title">Настоящий городок</h3>
-            <span class="advantages-num">— №1 —</span>
-            <p class="advantages-desc">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img src="images/photo-1.jpg" width="800" height="384" alt="Улица с зеленым домом и американскими флажками">
+          <li class="advantages-item">
+            <div class="true-town">
+              <h3 class="advantages-title">Настоящий городок</h3>
+              <span class="advantages-num">— №1 —</span>
+              <p class="advantages-desc">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              <img src="images/photo-1.jpg" width="800" height="384" alt="Улица с зеленым домом и американскими флажками">
+            </div>
             <ul class="advantages-more features-list">
-              <li class="advantages-item dark-blue-item">
+              <li class="advantages-item motel">
                 <h4 class="advantages-title">Жильё</h4>
                 <p class="advantages-desc">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
               </li>
-              <li class="advantages-item">
+              <li class="advantages-item food">
                 <h4 class="advantages-title">Еда</h4>
                 <p class="advantages-desc">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
               </li>
-              <li class="advantages-item dark-blue-item">
+              <li class="advantages-item souvenirs">
                 <h4 class="advantages-title">Сувениры</h4>
                 <p class="advantages-desc">Не только китайского, но и настоящего местного производства!</p>
               </li>
             </ul>
           </li>
-          <li class="advantages-item blue-item">
+          <li class="advantages-item devil-bridge">
             <h3 class="advantages-title">Там есть мост дьявола</h3>
             <span class="advantages-num">— №2 —</span>
             <p class="advantages-desc">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             <img src="images/photo-2.jpg" width="800" height="384" alt="Узкая скала в каньоне, похожая на мост">
           </li>
-          <li class="advantages-item light-blue-item">
+          <li class="advantages-item small-square">
             <h3 class="advantages-title">Небольшая площадь</h3>
             <span class="advantages-num">— №3 —</span>
             <p class="advantages-desc">Все достопримечательности находятся очень близко</p>
           </li>
-          <li class="advantages-item dark-blue-item">
+          <li class="advantages-item beautiful-road">
             <h3 class="advantages-title">Красивая дорога</h3>
             <span class="advantages-num">— №4 —</span>
             <p class="advantages-desc">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </li>
-          <li class="advantages-item light-blue-item">
+          <li class="advantages-item few-tourists">
             <h3 class="advantages-title">Мало туристов</h3>
             <span class="advantages-num">— №5 —</span>
             <p class="advantages-desc">Большинство едет в Гранд Каньон и толпится там</p>
@@ -112,14 +114,14 @@
       <!-- ПОИСК ГОСТИНИЦЫ -->
       <section class="search-form">
         <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
-        <p class="search-form-title heading">Заинтересовались?</p>
+        <p class="search-form-title title">Заинтересовались?</p>
         <p class="search-form-desc">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a href="#" class="button search-form-button">Поиск гостиницы в Cедоне</a>
       </section>
 
       <!-- РАССЫЛКА -->
       <section class="newsletter">
-        <h2 class="newsletter-title heading">Подпишитесь на рассылку</h2>
+        <h2 class="newsletter-title title">Подпишитесь на рассылку</h2>
         <p class="newsletter-desc">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form action="https://echo.htmlacademy.ru/" method="post" class="newsletter-form">
           <label class="newsletter-label">
