--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <!-- ПРЕИМУЩЕСТВА -->
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества отдыха в Седоне</h2>
-        <p class="advantages-main-title heading">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p class="advantages-main-title title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p class="advantages-main-desc">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
         <ol class="advantages-list">
           <li class="advantages-item">
