--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-
+ <!--коммента-->
     <!-- ШАПКА -->
     <header class="page-header">
       <a href="index.html" class="logo">
