--- a/index.html
+++ b/index.html
@@ -65,13 +65,11 @@
         <p class="advantages-main-title title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
         <p class="advantages-main-desc">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
         <ol class="advantages-list">
-          <li class="advantages-item">
-            <div class="true-town">
-              <h3 class="advantages-title">Настоящий городок</h3>
-              <span class="advantages-num">— №1 —</span>
-              <p class="advantages-desc">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-              <img src="images/photo-1.jpg" width="800" height="384" alt="Улица с зеленым домом и американскими флажками">
-            </div>
+          <li class="advantages-item true-town">
+            <h3 class="advantages-title">Настоящий городок</h3>
+            <span class="advantages-num">— №1 —</span>
+            <p class="advantages-desc">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <img src="images/photo-1.jpg" width="800" height="384" alt="Улица с зеленым домом и американскими флажками">
             <ul class="advantages-more features-list">
               <li class="advantages-item motel">
                 <h4 class="advantages-title">Жильё</h4>
